manifests/argo-cd-ingress/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd
  namespace: argocd
  annotations:
    cert-manager.io/issuer: argo-cd # Will generate Certificate
    cert-manager.io/revision-history-limit: "1"
spec:
  ingressClassName: public
  rules:
    - host: argo-cd.harmelodic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  name: http
  tls:
    - hosts:
        - argo-cd.harmelodic.com
      secretName: tls-cert-argo-cd-harmelodic-com # Secret will be auto-generated by cert-manager
